--- a/insects.html
+++ b/insects.html
@@ -14,7 +14,28 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
-
+  <div class="Name and Insects">
+    <div class="col-sm-2">G</div>
+    <div class="col-sm-2">U</div>
+    <div class="col-sm-2">T</div>
+    <div class="col-sm-2">I</div>
+    <div class="col-sm-2">E</div>
+    <div class="col-sm-2">R</div>
+    <div class="col-sm-2">R</div>
+    <div class="col-sm-2">E</div>
+    <div class="col-sm-2">Z</div>
+  </div>
+  <div class="Row">
+    <div class="col-md">Gnat</div>
+    <div class="col-md">Underwing</div>
+    <div class="col-md">Termites</div>
+    <div class="col-md">Icebugs</div>
+    <div class="col-md">Earwig</div>
+    <div class="col-md">Roach</div>
+    <div class="col-md">Raupe</div>
+    <div class="col-md">Earthworm</div>
+    <div class="col-md">Zoraptera</div>
+  </div>
 
 
 </body>
