--- a/insects.html
+++ b/insects.html
@@ -15,15 +15,16 @@
 </head>
 <body>
   <div class="Container-fluid">
-    <div class="col-sm-2"><p>G</p></div>
-    <div class="col-sm-2"><p>U</div>
-    <div class="col-sm-2"><p>T</p></div>
-    <div class="col-sm-2"><p>I</p></div>
-    <div class="col-sm-2"><p>E</p></div>
-    <div class="col-sm-2"><p>R</p></div>
-    <div class="col-sm-2"><p>R</p></div>
-    <div class="col-sm-2"><p>E</p></div>
-    <div class="col-sm-2"><p>Z</p></div>
+    <div class="column">
+      <div class="col-sm-2"><p>G</p></div>
+      <div class="col-sm-2"><p>U</div>
+      <div class="col-sm-2"><p>T</p></div>
+      <div class="col-sm-2"><p>I</p></div>
+      <div class="col-sm-2"><p>E</p></div>
+      <div class="col-sm-2"><p>R</p></div>
+      <div class="col-sm-2"><p>R</p></div>
+      <div class="col-sm-2"><p>E</p></div>
+      <div class="col-sm-2"><p>Z</p></div>
   </div>
   <div class="row">
     <div class="col-md-4"><p>Gnat</p></div>
@@ -35,6 +36,7 @@
     <div class="col-md-4"><p>Raupe/p></div>
     <div class="col-md-4"><p>Earthworm</p></div>
     <div class="col-md-4"><p>Zoraptera</p></div>
+  </div>
   </div>
 
 
