--- a/insects.html
+++ b/insects.html
@@ -14,8 +14,8 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="Container-fluid">
-    <div class="column">
+  <div class="container">
+    <div class="row">
       <div class="col-sm-2"><p>G</p></div>
       <div class="col-sm-2"><p>U</div>
       <div class="col-sm-2"><p>T</p></div>
@@ -27,15 +27,15 @@
       <div class="col-sm-2"><p>Z</p></div>
     </div>
     <div class="row">
-      <div class="col-md-4"><p>Gnat</p></div>
-      <div class="col-md-4"><p>Underwing</p></div>
-      <div class="col-md-4"><p>Termites</p></div>
-      <div class="col-md-4"><p>Icebugs</p></div>
-      <div class="col-md-4"><p>Earwig</p></div>
-      <div class="col-md-4"><p>Roach</p></div>
-      <div class="col-md-4"><p>Raupe/p></div>
-      <div class="col-md-4"><p>Earthworm</p></div>
-      <div class="col-md-4"><p>Zoraptera</p></div>
+      <div class="col-md"><p>Gnat</p></div>
+      <div class="col-md"><p>Underwing</p></div>
+      <div class="col-md"><p>Termites</p></div>
+      <div class="col-md"><p>Icebugs</p></div>
+      <div class="col-md"><p>Earwig</p></div>
+      <div class="col-md"><p>Roach</p></div>
+      <div class="col-md"><p>Raupe/p></div>
+      <div class="col-md"><p>Earthworm</p></div>
+      <div class="col-md"><p>Zoraptera</p></div>
     </div>
   </div>
 
