--- a/insects.html
+++ b/insects.html
@@ -16,26 +16,26 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-2"><p>G</p></div>
-      <div class="col-sm-2"><p>U</div>
-      <div class="col-sm-2"><p>T</p></div>
-      <div class="col-sm-2"><p>I</p></div>
-      <div class="col-sm-2"><p>E</p></div>
-      <div class="col-sm-2"><p>R</p></div>
-      <div class="col-sm-2"><p>R</p></div>
-      <div class="col-sm-2"><p>E</p></div>
-      <div class="col-sm-2"><p>Z</p></div>
+      <div class="col-sm-2">G</div>
+      <div class="col-sm-2">U</div>
+      <div class="col-sm-2">T</div>
+      <div class="col-sm-2">I</div>
+      <div class="col-sm-2">E</div>
+      <div class="col-sm-2">R</div>
+      <div class="col-sm-2">R</div>
+      <div class="col-sm-2">E</div>
+      <div class="col-sm-2">Z</div>
     </div>
     <div class="row">
-      <div class="col-md"><p>Gnat</p></div>
-      <div class="col-md"><p>Underwing</p></div>
-      <div class="col-md"><p>Termites</p></div>
-      <div class="col-md"><p>Icebugs</p></div>
-      <div class="col-md"><p>Earwig</p></div>
-      <div class="col-md"><p>Roach</p></div>
-      <div class="col-md"><p>Raupe/p></div>
-      <div class="col-md"><p>Earthworm</p></div>
-      <div class="col-md"><p>Zoraptera</p></div>
+      <div class="col-md">Gnat</div>
+      <div class="col-md">Underwing</div>
+      <div class="col-md">Termites</div>
+      <div class="col-md">Icebugs</div>
+      <div class="col-md">Earwig</div>
+      <div class="col-md">Roach</div>
+      <div class="col-md">Raupe</div>
+      <div class="col-md">Earthworm</div>
+      <div class="col-md">Zoraptera</div>
     </div>
   </div>
 
