--- a/insects.html
+++ b/insects.html
@@ -14,10 +14,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-  <div class="container">
-  </header>
-  <footer>
+  <div class="grid-container">
     <div class="row">
       <div class="col-sm-2">G</div>
       <div class="col-sm-2">U</div>
@@ -40,7 +37,6 @@
       <div class="col-md">Earthworm</div>
       <div class="col-md">Zoraptera</div>
     </div>
-    </footer>
   </div>
 
 
