--- a/insects.html
+++ b/insects.html
@@ -16,8 +16,8 @@
 <body>
   <div class="grid-container">
     <div class="row">
-      <div class="col-sm-2">G</div>
-      <div class="col-sm-2">U</div>
+      <div class="col-sm-2">.col-sm-2</div>
+      <div class="col-sm-2">.U</div>
       <div class="col-sm-2">T</div>
       <div class="col-sm-2">I</div>
       <div class="col-sm-2">E</div>
@@ -38,7 +38,5 @@
       <div class="col-md">Zoraptera</div>
     </div>
   </div>
-
-
 </body>
 </html>
