--- a/insects.html
+++ b/insects.html
@@ -16,8 +16,8 @@
 <body>
   <div class="grid-container">
     <div class="row">
-      <div class="col-sm-2">.col-sm-2</div>
-      <div class="col-sm-2">.U</div>
+      <div class="col-sm-2">G</div>
+      <div class="col-sm-2">U</div>
       <div class="col-sm-2">T</div>
       <div class="col-sm-2">I</div>
       <div class="col-sm-2">E</div>
@@ -26,17 +26,7 @@
       <div class="col-sm-2">E</div>
       <div class="col-sm-2">Z</div>
     </div>
-    <div class="row">
-      <div class="col-md">Gnat</div>
-      <div class="col-md">Underwing</div>
-      <div class="col-md">Termites</div>
-      <div class="col-md">Icebugs</div>
-      <div class="col-md">Earwig</div>
-      <div class="col-md">Roach</div>
-      <div class="col-md">Raupe</div>
-      <div class="col-md">Earthworm</div>
-      <div class="col-md">Zoraptera</div>
-    </div>
+    
   </div>
 </body>
 </html>
