--- a/insects.html
+++ b/insects.html
@@ -14,7 +14,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="grid-container">
+  <div class="container">
     <div class="row">
       <div class="col-sm-2">G</div>
       <div class="col-sm-2">U</div>
@@ -22,11 +22,15 @@
       <div class="col-sm-2">I</div>
       <div class="col-sm-2">E</div>
       <div class="col-sm-2">R</div>
-      <div class="col-sm-2">R</div>
-      <div class="col-sm-2">E</div>
-      <div class="col-sm-2">Z</div>
     </div>
-    
+    <div class="row">
+      <div class="col-*-*"></div>
+      <div class="col-*-*"></div>
+      <div class="col-*-*"></div>
+      <div class="col-*-*"></div>
+      <div class="col-*-*"></div>
+      <div class="col-*-*"></div>
+    </div>
   </div>
 </body>
 </html>
