--- a/insects.html
+++ b/insects.html
@@ -24,12 +24,12 @@
       <div class="col-sm-2">R</div>
     </div>
     <div class="row">
-      <div class="col-*-*"></div>
-      <div class="col-*-*"></div>
-      <div class="col-*-*"></div>
-      <div class="col-*-*"></div>
-      <div class="col-*-*"></div>
-      <div class="col-*-*"></div>
+      <div class="col-md-">Gnat</div>
+      <div class="col-md-">Underwing</div>
+      <div class="col-md-">Termites</div>
+      <div class="col-md-">Icebugs</div>
+      <div class="col-md-">Earwig</div>
+      <div class="col-md-">Roach</div>
     </div>
   </div>
 </body>
