--- a/insects.html
+++ b/insects.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-2">G</div>
+      <div class="col-sm-2" style="background-color:pink;">G</div>
       <div class="col-sm-2">U</div>
       <div class="col-sm-2">T</div>
       <div class="col-sm-2">I</div>
@@ -24,12 +24,12 @@
       <div class="col-sm-2">R</div>
     </div>
     <div class="row">
-      <div class="col-md-2">Gnat</div>
-      <div class="col-md-2">Underwing</div>
-      <div class="col-md-2">Termites</div>
-      <div class="col-md-2">Icebugs</div>
-      <div class="col-md-2">Earwig</div>
-      <div class="col-md-2">Roach</div>
+      <div class="col-md">Gnat</div>
+      <div class="col-md">Underwing</div>
+      <div class="col-md">Termites</div>
+      <div class="col-md">Icebugs</div>
+      <div class="col-md">Earwig</div>
+      <div class="col-md">Roach</div>
     </div>
   </div>
 </body>
