--- a/insects.html
+++ b/insects.html
@@ -12,11 +12,17 @@
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" 
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-</head>
+  <style>
+    .flex-container {
+      display: flex; flex-direction: row;
+    }
+    .flex-container > div {}
+  </style>
+  </head>
 <body>
-  <div class="container">
+  <div class="flex-container">
     <div class="row">
-      <div class="col-sm-2" style="background-color:pink;">G</div>
+      <div class="col-sm-2">G</div>
       <div class="col-sm-2">U</div>
       <div class="col-sm-2">T</div>
       <div class="col-sm-2">I</div>
