--- a/insects.html
+++ b/insects.html
@@ -13,14 +13,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" 
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
   <style>
-    .flex-container {
+    .container {
       display: flex; flex-direction: row;
     }
-    .flex-container > div {}
+    .container > div {
+      margin: 10px; padding: 42px; font-size: 30px;
+    }
   </style>
   </head>
 <body>
-  <div class="flex-container">
+  <div class="container">
     <div class="row">
       <div class="col-sm-2">G</div>
       <div class="col-sm-2">U</div>
