Added images for three of the insects
made them an image and a thumbnail.

--- a/insects.html
+++ b/insects.html
@@ -6,23 +6,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet”
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"   
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" 
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
   <style>
-    .container {
+    .flex-container {
       display: flex; flex-direction: row;
     }
-    .container > div {
+    .flex-container > div {
       margin: 10px; padding: 42px; font-size: 30px;
     }
+
   </style>
   </head>
 <body>
-  <div class="container">
+  <div class="flex-container">
     <div class="row">
       <div class="col-sm-2">G</div>
       <div class="col-sm-2">U</div>
@@ -38,6 +39,13 @@
       <div class="col-md">Icebugs</div>
       <div class="col-md">Earwig</div>
       <div class="col-md">Roach</div>
+    </div>
+  </div>
+  <div class="flex-container">
+    <div class="image">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\termites.jpg" class="img-fluid" alt="Responsive image">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\icebugs.jpg" class="img-fluid" alt="Responsive image">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\gnat.jpg" class="img-fluid" alt="Responsive image">
     </div>
   </div>
 </body>
