--- a/insects.html
+++ b/insects.html
@@ -48,5 +48,12 @@
       <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\gnat.jpg" class="img-fluid" alt="Responsive image">
     </div>
   </div>
+  <div class="flex-container">
+    <div class="image">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\termites.jpg" alt="..." class="img-thumbnail">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\icebugs.jpg" alt="..." class="img-thumbnail">
+      <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\gnat.jpg" alt="..." class="img-thumbnail">
+    </div>
+  </div>
 </body>
 </html>
