added a table for letters and insects
added table with letter, insect, city, and river. made the table bordered and dark.

--- a/insects.html
+++ b/insects.html
@@ -55,5 +55,54 @@
       <img src="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\gnat.jpg" alt="..." class="img-thumbnail">
     </div>
   </div>
+  <table class="table table-bordered table-dark">
+    <caption>Six letters with matching names</caption>
+    <thead>
+      <tr>
+        <th scope="col">Letter</th>
+        <th scope="col">Insect</th>
+        <th scope="col">City</th>
+        <th scope="col">River</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">G</th>
+        <td>Gnat</td>
+        <td>Glendale</td>
+        <td>Gibbon River</td>
+      </tr>
+      <tr>
+        <th scope="row">U</th>
+        <td>Underwing</td>
+        <td>Ukiah</td>
+        <td>Ugashik River</td>
+      </tr>
+      <tr>
+        <th scope="row">T</th>
+        <td>Termites</td>
+        <td>Tacoma</td>
+        <td>Thames River</td>
+      </tr>
+      <tr>
+        <th scope="row">I</th>
+        <td>Icebugs</td>
+        <td>Istanbul</td>
+        <td>Illinois River</td>
+      </tr>
+      <tr>
+        <th scope="row">E</th>
+        <td>Earwig</td>
+        <td>Enid</td>
+        <td>Econfina River</td>
+      </tr>
+      <tr>
+        <th scope="row">R</th>
+        <td>Roach</td>
+        <td>Reno</td>
+        <td>Rhine</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
