--- a/insects.html
+++ b/insects.html
@@ -104,5 +104,25 @@
       </tr>
     </tbody>
   </table>
+  <button type="button" class="btn btn-primary">G</button>
+  <button type="button" class="btn btn-primary">U</button>
+  <button type="button" class="btn btn-primary">T</button>
+  <button type="button" class="btn btn-primary">I</button>
+  <button type="button" class="btn btn-primary">E</button>
+  <button type="button" class="btn btn-primary">R</button>
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with letter groups">
+    <div class="btn-group" role="green-group" aria-label="Successes">
+      <button type="button" class="btn btn-success">G</button>
+      <button type="button" class="btn btn-success">I</button>
+      <button type="button" class="btn btn-success">T</button>
+    </div>
+    <div class="btn-group" role="yellow-group" aria-label="Warnings">
+      <button type="button" class="btn btn-warning">U</button>
+      <button type="button" class="btn btn-warning">E</button>
+    </div>
+    <div class="btn-group" role="red-group" aria-label="Danger">
+      <button type="button" class="btn btn-danger">R</button>
+    </div>  
+  </div>
 </body>
 </html>
