--- a/insects.html
+++ b/insects.html
@@ -124,5 +124,14 @@
       <button type="button" class="btn btn-danger">R</button>
     </div>  
   </div>
+  <div class="dropdown">
+    <div class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Pages list
+    </div>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\advanced.html">Advanced</a>
+      <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\basic.html">Basic</a>
+    </div>
+  </div>
 </body>
 </html>
