--- a/insects.html
+++ b/insects.html
@@ -124,13 +124,15 @@
       <button type="button" class="btn btn-danger">R</button>
     </div>  
   </div>
-  <div class="dropdown">
-    <div class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Pages list
-    </div>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\advanced.html">Advanced</a>
-      <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\basic.html">Basic</a>
+  <div class="flex-container">
+    <div class="dropdown">
+      <button type="button" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\basic.html" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\advanced.html" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Pages
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\advanced.html">Advanced</a>
+        <a class="dropdown-item" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\basic.html">Basic</a>
+      </div>
     </div>
   </div>
 </body>
