added navbar to the top of the page.

--- a/insects.html
+++ b/insects.html
@@ -23,6 +23,24 @@
   </style>
   </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="flex-container">
+      <a class="navbar-brand" href="#">Interesting Insects</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-link">
+            <a class="nav-link" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\basic.html">Basic</a>
+          </li>
+          <li class="nav-link">
+            <a class="nav-link" href="C:\Users\S535530\OneDrive - nwmissouri.edu\Desktop\webapps-repos\44563-webapps-assignment-5-S535530\advanced.html">Advanced</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="flex-container">
     <div class="row">
       <div class="col-sm-2">G</div>
