--- a/insects.html
+++ b/insects.html
@@ -41,6 +41,23 @@
       </div>
     </div>
   </nav>
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">Enter your email here.</div>
+    </div>
+    <div class="form-group">
+      <label for="exampleInsect" class="form-label">Insect</label>
+      <input type="text" class="form-control" id="exampleInsect" aria-describedby="insectHelp">
+      <div id="insectHelp" class="form-text">Enter your insect.</div>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
   <div class="flex-container">
     <div class="row">
       <div class="col-sm-2">G</div>
